// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown renders code block 1`] = `
.emotion-0 {
  display: block;
}

.emotion-0 code {
  padding: 3px;
  border-radius: 3px;
  background-color: #040b1d;
  color: white;
  font-family: 'Source Code Pro',Menlo,Monaco,Consolas,'Courier New',monospace;
}

.emotion-1 {
  max-width: 100%;
  padding: 20px;
  border-radius: 10px;
  background-color: #040b1d;
  color: white;
  position: relative;
  padding-right: 20px;
  margin-bottom: 16px;
}

.emotion-1>code {
  padding: 0;
  border-radius: 0;
  background-color: transparent;
}

.emotion-2 {
  white-space: nowrap;
  border: none;
  border-radius: 4px;
  box-sizing: border-box;
  font-family: Inter,Arial,sans-serif;
  font-size: 14px;
  line-height: 22px;
  transition-timing-function: ease-in-out;
  transition-duration: 0.07s;
  transition-property: background-color,color;
  outline: none;
  cursor: pointer;
  -webkit-font-smoothing: antialiased;
  padding: 1px 4px;
  background-color: transparent;
  color: #5c606c;
  cursor: pointer;
  position: absolute;
  top: 16px;
  right: 16px;
  background-color: #040b1d;
}

.emotion-2:hover,
.emotion-2:focus,
.emotion-2:active {
  transition-property: background-color,color,box-shadow;
}

.emotion-2:disabled,
.emotion-2:disabled:active,
.emotion-2:disabled:hover {
  cursor: default;
}

.emotion-2:focus,
.emotion-2:hover {
  background-color: #e6e7e8;
}

.emotion-2:disabled,
.emotion-2:disabled:active,
.emotion-2:disabled:hover {
  background-color: #fafafa;
  color: #d9dadd;
}

.emotion-2 svg {
  fill: #5c606c;
}

.emotion-2:disabled svg {
  fill: #d9dadd;
}

.emotion-3 {
  width: 16px;
  height: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  width: 14px;
  height: 14px;
  width: 16px;
  height: 16px;
  fill: #5c606c;
  width: 16px;
  height: 16px;
  margin-bottom: 2px;
  fill: white;
}

.emotion-4 {
  overflow: hidden;
  overflow-x: auto;
}

.emotion-5 {
  margin: 0;
  font-family: 'Source Code Pro',Menlo,Monaco,Consolas,'Courier New',monospace;
  font-size: 14px;
  line-height: 20px;
  color: #000000;
  -webkit-font-smoothing: antialiased;
}

.emotion-5 b {
  font-weight: 600;
}

<div
  className="emotion-0"
>
  <pre
    className="emotion-1"
  >
    <button
      className="emotion-2"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onScroll={[Function]}
      placement="top"
      type="button"
    >
      <svg
        className="emotion-3"
        viewBox="0 0 16 16"
      >
        <use
          xlinkHref="#icon-copy"
        />
      </svg>
    </button>
    <div
      className="emotion-4"
    >
      <code
        className="emotion-5"
      >
        Code block
      </code>
    </div>
  </pre>
</div>
`;

exports[`Markdown renders code inline 1`] = `
.emotion-0 {
  display: block;
}

.emotion-0 code {
  padding: 3px;
  border-radius: 3px;
  background-color: #040b1d;
  color: white;
  font-family: 'Source Code Pro',Menlo,Monaco,Consolas,'Courier New',monospace;
}

.emotion-1 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 14px;
  line-height: 22px;
  color: #000000;
  -webkit-font-smoothing: antialiased;
  margin: 10px 0 20px;
}

.emotion-1 b {
  font-weight: 600;
}

.emotion-2 {
  margin: 0;
  font-family: 'Source Code Pro',Menlo,Monaco,Consolas,'Courier New',monospace;
  font-size: 14px;
  line-height: 20px;
  color: #000000;
  -webkit-font-smoothing: antialiased;
}

.emotion-2 b {
  font-weight: 600;
}

<div
  className="emotion-0"
>
  <p
    className="emotion-1"
  >
    <code
      className="emotion-2"
    >
      Code line
    </code>
  </p>
</div>
`;

exports[`Markdown renders mixed content 1`] = `
.emotion-0 {
  display: block;
}

.emotion-0 code {
  padding: 3px;
  border-radius: 3px;
  background-color: #040b1d;
  color: white;
  font-family: 'Source Code Pro',Menlo,Monaco,Consolas,'Courier New',monospace;
}

.emotion-1 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 20px;
  line-height: 28px;
  font-weight: 600;
  color: #040b1d;
  -webkit-font-smoothing: antialiased;
  margin: 20px 0 10px;
  color: #000;
}

.emotion-2 {
  color: inherit;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2:hover,
.emotion-2:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 14px;
  line-height: 22px;
  color: #000000;
  -webkit-font-smoothing: antialiased;
  margin: 10px 0 20px;
}

.emotion-3 b {
  font-weight: 600;
}

.emotion-4 {
  max-width: 100%;
  padding: 20px;
  border-radius: 10px;
  background-color: #040b1d;
  color: white;
  position: relative;
  padding-right: 20px;
  margin-bottom: 16px;
}

.emotion-4>code {
  padding: 0;
  border-radius: 0;
  background-color: transparent;
}

.emotion-5 {
  white-space: nowrap;
  border: none;
  border-radius: 4px;
  box-sizing: border-box;
  font-family: Inter,Arial,sans-serif;
  font-size: 14px;
  line-height: 22px;
  transition-timing-function: ease-in-out;
  transition-duration: 0.07s;
  transition-property: background-color,color;
  outline: none;
  cursor: pointer;
  -webkit-font-smoothing: antialiased;
  padding: 1px 4px;
  background-color: transparent;
  color: #5c606c;
  cursor: pointer;
  position: absolute;
  top: 16px;
  right: 16px;
  background-color: #040b1d;
}

.emotion-5:hover,
.emotion-5:focus,
.emotion-5:active {
  transition-property: background-color,color,box-shadow;
}

.emotion-5:disabled,
.emotion-5:disabled:active,
.emotion-5:disabled:hover {
  cursor: default;
}

.emotion-5:focus,
.emotion-5:hover {
  background-color: #e6e7e8;
}

.emotion-5:disabled,
.emotion-5:disabled:active,
.emotion-5:disabled:hover {
  background-color: #fafafa;
  color: #d9dadd;
}

.emotion-5 svg {
  fill: #5c606c;
}

.emotion-5:disabled svg {
  fill: #d9dadd;
}

.emotion-6 {
  width: 16px;
  height: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  vertical-align: middle;
  width: 14px;
  height: 14px;
  width: 16px;
  height: 16px;
  fill: #5c606c;
  width: 16px;
  height: 16px;
  margin-bottom: 2px;
  fill: white;
}

.emotion-7 {
  overflow: hidden;
  overflow-x: auto;
}

.emotion-8 {
  margin: 0;
  font-family: 'Source Code Pro',Menlo,Monaco,Consolas,'Courier New',monospace;
  font-size: 14px;
  line-height: 20px;
  color: #000000;
  -webkit-font-smoothing: antialiased;
  color: #f8f8f2;
  background: none;
  text-align: left;
  white-space: pre;
  word-spacing: normal;
  word-break: normal;
  word-wrap: normal;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  -webkit-hyphens: none;
  -moz-hyphens: none;
  -ms-hyphens: none;
  hyphens: none;
}

.emotion-8 b {
  font-weight: 600;
}

.emotion-8 .token.comment,
.emotion-8 .token.prolog,
.emotion-8 .token.doctype,
.emotion-8 .token.cdata {
  color: slategray;
}

.emotion-8 .token.punctuation {
  color: #f8f8f2;
}

.emotion-8 .token.namespace {
  opacity: .7;
}

.emotion-8 .token.property,
.emotion-8 .token.tag,
.emotion-8 .token.constant,
.emotion-8 .token.symbol,
.emotion-8 .token.deleted {
  color: #f92672;
}

.emotion-8 .token.boolean,
.emotion-8 .token.number {
  color: #ae81ff;
}

.emotion-8 .token.selector,
.emotion-8 .token.attr-name,
.emotion-8 .token.string,
.emotion-8 .token.char,
.emotion-8 .token.builtin,
.emotion-8 .token.inserted {
  color: #a6e22e;
}

.emotion-8 .token.operator,
.emotion-8 .token.entity,
.emotion-8 .token.url,
.emotion-8 .language-css .token.string,
.emotion-8 .style .token.string,
.emotion-8 .token.variable {
  color: #f8f8f2;
}

.emotion-8 .token.atrule,
.emotion-8 .token.attr-value,
.emotion-8 .token.function,
.emotion-8 .token.class-name {
  color: #e6db74;
}

.emotion-8 .token.keyword {
  color: #66d9ef;
}

.emotion-8 .token.regex,
.emotion-8 .token.important {
  color: #fd971f;
}

.emotion-8 .token.important,
.emotion-8 .token.bold {
  font-weight: bold;
}

.emotion-8 .token.italic {
  font-style: italic;
}

.emotion-8 .token.entity {
  cursor: help;
}

<div
  className="emotion-0"
>
  <div>
    <h2
      className="emotion-1"
      id="connect-to-tarantool-cartridge-using-python-clienthttpsgithubcomtarantooltarantool-python"
    >
      Connect to Tarantool Cartridge using 
      <a
        className="emotion-2"
        href="https://github.com/tarantool/tarantool-python"
        target="_blank"
      >
        python client
      </a>
    </h2>
    <p
      className="emotion-3"
    >
      First, 
      <strong>
        install
      </strong>
       
      <em>
        tarantool
      </em>
       package using 
      <em>
        pip3
      </em>
      :
    </p>
    <pre
      className="emotion-4"
    >
      <button
        className="emotion-5"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onScroll={[Function]}
        placement="top"
        type="button"
      >
        <svg
          className="emotion-6"
          viewBox="0 0 16 16"
        >
          <use
            xlinkHref="#icon-copy"
          />
        </svg>
      </button>
      <div
        className="emotion-7"
      >
        <code
          className="language-bash emotion-8"
        >
          pip3 install tarantool
        </code>
      </div>
    </pre>
    <p
      className="emotion-3"
    >
      Create a file example.py with the code to get started:
    </p>
    <pre
      className="emotion-4"
    >
      <button
        className="emotion-5"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onScroll={[Function]}
        placement="top"
        type="button"
      >
        <svg
          className="emotion-6"
          viewBox="0 0 16 16"
        >
          <use
            xlinkHref="#icon-copy"
          />
        </svg>
      </button>
      <div
        className="emotion-7"
      >
        <code
          className="language-python emotion-8"
        >
          from tarantool import Connection
c = Connection(
    "try-cartridge.tarantool.io", 
    10300, 
    user='admin', 
    password='npngatmwsf'
)
result = c.insert("examples", (333, 'Value', 'Value'))
space = c.space("examples")
results = space.select(333)
print(results)
        </code>
      </div>
    </pre>
    <p
      className="emotion-3"
    >
      Run the script
    </p>
    <pre
      className="emotion-4"
    >
      <button
        className="emotion-5"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onScroll={[Function]}
        placement="top"
        type="button"
      >
        <svg
          className="emotion-6"
          viewBox="0 0 16 16"
        >
          <use
            xlinkHref="#icon-copy"
          />
        </svg>
      </button>
      <div
        className="emotion-7"
      >
        <code
          className="language-bash emotion-8"
        >
          python3 example.py
        </code>
      </div>
    </pre>
  </div>
</div>
`;

exports[`Markdown renders with built-in component overriding 1`] = `
.emotion-0 {
  display: block;
}

.emotion-0 code {
  padding: 3px;
  border-radius: 3px;
  background-color: #040b1d;
  color: white;
  font-family: 'Source Code Pro',Menlo,Monaco,Consolas,'Courier New',monospace;
}

.emotion-1 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 24px;
  line-height: 40px;
  font-weight: 600;
  color: #040b1d;
  -webkit-font-smoothing: antialiased;
  margin: 20px 0 10px;
  color: #000;
}

.emotion-2 {
  margin: 0;
  font-family: Inter,Arial,sans-serif;
  font-size: 14px;
  line-height: 22px;
  color: #000000;
  -webkit-font-smoothing: antialiased;
  margin: 10px 0 20px;
}

.emotion-2 b {
  font-weight: 600;
}

.emotion-3 {
  padding: 10px 40px 1px;
  border-radius: 4px;
  margin: 10px 0 20px;
  background-color: #f0f2f5;
}

.emotion-5 {
  margin: 10px 0;
}

<div
  className="emotion-0"
>
  <div>
    <h1
      className="emotion-1"
      id="bee-careful"
    >
      Bee careful
    </h1>
    <p
      className="emotion-2"
    >
      Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
    </p>
    <blockquote
      className="emotion-3"
    >
      <p
        className="emotion-2"
      >
        Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium
      </p>
    </blockquote>
    <ul
      className="iAmOverridedComponent"
    >
      <li
        className="emotion-5"
      >
        Create file
      </li>
      <li
        className="emotion-5"
      >
        Rename file
      </li>
      <li
        className="emotion-5"
      >
        Save file
      </li>
    </ul>
  </div>
</div>
`;
